--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@ header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(188, 228, 42);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(207, 213, 156);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(100, 128, 0);
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(188, 228, 42);
 }
